@@ -19,13 +19,10 @@ MOD_WHOSONLINE_XML_DESCRIPTION="The Who's Online Module displays the number of A
 MOD_WHOSONLINE="Who's Online"
 
 ; frontend display
-; in the following string 
-; %2$s is the number of guests
-; %1$s is the word guest or guests
-; %4$s is the number of members
-; %3$s is the word member or members
-MOD_WHOSONLINE_WE_HAVE="We have %2$s&nbsp;%1$s and %4$s&nbsp;%3$s online"
-MOD_WHOSONLINE_GUEST="guest"
-MOD_WHOSONLINE_GUESTS="guests"
-MOD_WHOSONLINE_MEMBER="member"
-MOD_WHOSONLINE_MEMBERS="members"
+; in the following string
+; %1$s is for guest/s and %2$s for member/s
+MOD_WHOSONLINE_WE_HAVE="We have %1$s and %2$s online"
+MOD_WHOSONLINE_GUEST="%s&nbsp;guest"
+MOD_WHOSONLINE_GUESTS="%s&nbsp;guests"
+MOD_WHOSONLINE_MEMBER="%s&nbsp;member"
+MOD_WHOSONLINE_MEMBERS="%s&nbsp;members" 
